# html-parser

./: Cargo.toml  build.rs
examples/: parse.rs
src/: html.rs  lib.rs  main.rs
src/html/: a.rs  abbr.rs  address.rs  area.rs  article.rs  aside.rs  audio.rs  b.rs  base.rs  bdi.rs  bdo.rs  blockquote.rs  body.rs  br.rs  button.rs  canvas.rs  caption.rs  cite.rs  code.rs  col.rs  colgroup.rs  data.rs  datalist.rs  dd.rs  del.rs  details.rs  dfn.rs  dialog.rs  div.rs  dl.rs  dt.rs  em.rs  embed.rs  fieldset.rs  figcaption.rs  figure.rs  footer.rs  form.rs  h1.rs  h2.rs  (+73 more)
